version/0.6/_sources/api/sdk/_autosummary/pytwin.TwinRuntime.rst.txt
TwinRuntime
===========

.. currentmodule:: pytwin

.. autoclass:: TwinRuntime

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      TwinRuntime.build_prop_info_df
      
      
      TwinRuntime.evaluate_twin_prop_status
      
      
      TwinRuntime.evaluate_twin_status
      
      
      TwinRuntime.full_model_properties_info_df
      
      
      TwinRuntime.get_model_fmi_type
      
      
      TwinRuntime.get_twin_version
      
      
      TwinRuntime.load_dll
      
      
      TwinRuntime.load_twin_default_sim_settings
      
      
      TwinRuntime.model_properties_info_df
      
      
      TwinRuntime.print_model_info
      
      
      TwinRuntime.print_var_info
      
      
      TwinRuntime.twin_close
      
      
      TwinRuntime.twin_disable_3d_rom_model_data
      
      
      TwinRuntime.twin_disable_rom_model_images
      
      
      TwinRuntime.twin_enable_3d_rom_model_data
      
      
      TwinRuntime.twin_enable_rom_model_images
      
      
      TwinRuntime.twin_get_api_version
      
      
      TwinRuntime.twin_get_default_rom_image_directory
      
      
      TwinRuntime.twin_get_default_simulation_settings
      
      
      TwinRuntime.twin_get_input_names
      
      
      TwinRuntime.twin_get_model_dependencies
      
      
      TwinRuntime.twin_get_model_name
      
      
      TwinRuntime.twin_get_number_inputs
      
      
      TwinRuntime.twin_get_number_outputs
      
      
      TwinRuntime.twin_get_number_params
      
      
      TwinRuntime.twin_get_output_by_index
      
      
      TwinRuntime.twin_get_output_by_name
      
      
      TwinRuntime.twin_get_output_names
      
      
      TwinRuntime.twin_get_outputs
      
      
      TwinRuntime.twin_get_param_names
      
      
      TwinRuntime.twin_get_rom_images_files
      
      
      TwinRuntime.twin_get_rom_mode_coef_files
      
      
      TwinRuntime.twin_get_rom_resource_directory
      
      
      TwinRuntime.twin_get_rom_snapshot_files
      
      
      TwinRuntime.twin_get_status_string
      
      
      TwinRuntime.twin_get_str_var_start
      
      
      TwinRuntime.twin_get_var_data_type
      
      
      TwinRuntime.twin_get_var_description
      
      
      TwinRuntime.twin_get_var_max
      
      
      TwinRuntime.twin_get_var_min
      
      
      TwinRuntime.twin_get_var_nominal
      
      
      TwinRuntime.twin_get_var_quantity_type
      
      
      TwinRuntime.twin_get_var_start
      
      
      TwinRuntime.twin_get_var_unit
      
      
      TwinRuntime.twin_get_visualization_resources
      
      
      TwinRuntime.twin_initialize
      
      
      TwinRuntime.twin_instantiate
      
      
      TwinRuntime.twin_is_cross_platform
      
      
      TwinRuntime.twin_load
      
      
      TwinRuntime.twin_load_state
      
      
      TwinRuntime.twin_number_of_deployments
      
      
      TwinRuntime.twin_platform_support
      
      
      TwinRuntime.twin_reset
      
      
      TwinRuntime.twin_save_state
      
      
      TwinRuntime.twin_set_input_by_index
      
      
      TwinRuntime.twin_set_input_by_name
      
      
      TwinRuntime.twin_set_inputs
      
      
      TwinRuntime.twin_set_param_by_index
      
      
      TwinRuntime.twin_set_param_by_name
      
      
      TwinRuntime.twin_set_rom_image_directory
      
      
      TwinRuntime.twin_set_str_param_by_name
      
      
      TwinRuntime.twin_simulate
      
      
      TwinRuntime.twin_simulate_batch_mode
      
      
      TwinRuntime.twin_simulate_batch_mode_csv
      
   
   

   
   
   